--- a/upstream/Makefile.in
+++ b/upstream/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.26 2021/05/10 08:25:20 tom Exp $
+# $Id: Makefile.in,v 1.28 2021/08/08 22:39:34 tom Exp $
 # @(#) @Header: /home/daffy/u0/vern/flex/RCS/Makefile.in,v 1.45 96/09/10 16:59:04 vern Exp @ (LBL)
 
 @SET_MAKE@
@@ -95,7 +95,7 @@ CPPFLAGS        = -I. -I$(srcdir) \
 
 .c$o:
 	@RULE_CC@
-	@ECHO_CC@$(CC) -c $(CPPFLAGS) $(CFLAGS) $<
+	@ECHO_CC@$(CC) -c $(CPPFLAGS) $(CFLAGS) $(EXTRA_CFLAGS) $<
 
 HEADERS = flexdef.h version.h
 
@@ -217,6 +217,7 @@ install.man: flex.1
 		$(actual_HEADER) \
 		$(actual_LIBROOT) \
 		$(INSTALL_DATA)
+	$(SHELL) -c "cd $(mansubdir) && $(LN_S) -f $(actual_PROGRAM).$(manext).gz $(actual_PROGRAM)++.$(manext).gz"
 
 install.cat: $(FLEX).man
 	$(SHELL) $(srcdir)/rename.sh \
