--- a/upstream/conf.in
+++ b/upstream/conf.in
@@ -30,6 +30,12 @@
 /* Define if platform-specific command line handling is necessary.  */
 #undef NEED_ARGV_FIXUP
 
+/* Define to template for printf, for compiler-warnings */
+#undef GCC_PRINTFLIKE
+
+/* Define to template for noreturn, for compiler-warnings */
+#undef GCC_NORETURN
+
 /*
  * vile:cmode
  */
